--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "shop",
-  "version": "0.0.0",
+  "name": "todolist",
+  "version": "0.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -11,6 +11,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-material-components/datetime-picker": "^4.0.5",
     "@angular/animations": "~7.2.0",
     "@angular/cdk": "~7.3.7",
     "@angular/common": "~7.2.0",
@@ -26,9 +27,9 @@
     "chart.js": "^2.8.0",
     "core-js": "^2.5.4",
     "firebase": "^5.9.4",
-    "ngx-mask": "^7.3.6",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.20",
+    "ngx-mask": "^7.3.6",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
